@@ -1,0 +1,52 @@
+<?xml version="1.0"?>
+<Project xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+	 xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+	 xmlns:dc="http://purl.org/dc/elements/1.1/"
+	 xmlns:doapext="http://mfgames.com/2009/doap-ext"
+	 xmlns:foaf="http://xmlns.com/foaf/0.1/"
+	 xmlns="http://usefulinc.com/ns/doap#">
+  <doapext:short-name>mfgames-cil</doapext:short-name>
+  <name>MfGames CIL</name>
+  <homepage rdf:resource="http://mfgames.com/mfgames-cil"/>
+
+  <shortdesc xml:lang="en">A collection of useful functions, methods, and classes for CIL languages.</shortdesc>
+
+  <description xml:lang="en">A CIL (.NET) library with a hodge-podge of uses. It includes implementations of Mersenne Twister, dice parsing and rolling, and other useful functionality.</description>
+
+  <audience>Developers</audience>
+  <license rdf:resource="http://www.opensource.org/licenses/mit-license.php">MIT</license>
+  <programming-language>CIL</programming-language>
+  <programming-language>C#</programming-language>
+
+  <!-- Credits -->
+  <maintainer>
+    <foaf:Person>
+      <foaf:name>Dylan R. E. Moonfire</foaf:name>
+      <foaf:homepage rdf:resource="http://d.moonfire.us/" />
+    </foaf:Person>
+  </maintainer>
+
+  <!-- Project Pages -->
+  <download-page rdf:resource="http://mfgames.com/mfgames-cil/downloads"/>
+  <bug-database rdf:resource="http://tracker.mfgames.com/"/>
+  <doapext:project-page rdf:resource="http://mfgames.com/mfgames-cil/credits">Credits</doapext:project-page>
+
+  <!-- Releases -->
+  <release>
+    <Version>
+      <name>unstable</name>
+      <created>2009-06-23</created>
+      <revision>3.0.0</revision>
+
+      <file-release rdf:resource="http://mfgames.com/releases/mfgames-cil/mfgames-cil-binary-3.0.0.zip">Binary (.zip)</file-release>
+      <file-release rdf:resource="http://mfgames.com/releases/mfgames-cil/mfgames-cil-3.0.0.zip">Source (.zip)</file-release>
+    </Version>
+  </release>
+
+  <!-- Repositories -->
+  <repository>
+    <SVNRepository>
+      <location rdf:resource="http://svn.mfgames.com/MfGames/"/>
+    </SVNRepository>
+  </repository>
+</Project>
